# feup-aed1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
dataset/: classes_per_uc.csv  students_classes.csv
docs/: CMakeLists.txt  Doxyfile
src/: utils.cpp  utils.h
src/classes/: Dataset.cpp  Dataset.h  Lesson.cpp  Lesson.h  Menu.cpp  Menu.h  Request.cpp  Request.h  Student.cpp  Student.h  Uc.cpp  Uc.h  UcClass.cpp  UcClass.h  Window.cpp  Window.h
src/menus/: choose_schedule_menu.txt  request_menu.txt  search_menu.txt  sort_menu.txt  welcome_screen.txt
